# Moana

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 653419a6908b_initial_schema.py  a1a6a97ccb6b_add_nursery_rhyme_user_selections.py
backend/moana/: config.py  database.py  main.py  themes.py
backend/moana/agents/: __init__.py  analytics.py  intent.py  planner.py  review.py  schemas.py  story.py
backend/moana/api/: __init__.py  admin.py  callback.py  child.py  content.py  intent.py  plan.py  play.py
backend/moana/models/: __init__.py  base.py  child.py  child_settings.py  content.py  favorite.py  feedback.py  generation_log.py  play_history.py  share.py  user.py
backend/moana/pipelines/: __init__.py  nursery_rhyme.py  picture_book.py  standalone_video.py  video.py
backend/moana/routers/: __init__.py  analytics.py  auth.py  feedback.py  library.py
backend/moana/schemas/: __init__.py  auth.py  nursery_rhyme.py
backend/moana/services/: wechat.py
backend/moana/styles/: __init__.py
backend/moana/utils/: security.py
backend/tests/: test_config.py  test_database.py  test_integration.py  test_themes.py
backend/tests/agents/: test_intent.py  test_planner.py  test_schemas.py  test_song.py  test_story.py
backend/tests/api/: test_auth.py  test_child.py  test_content.py  test_feedback.py  test_first_frame.py  test_intent.py  test_library.py  test_plan.py  test_play.py  test_smart_picture_book.py  test_standalone_video.py  test_video_config.py
miniprogram/: CLAUDE.md
(+190 files in other folders)
